# ocpy10_django_api_project_manager

./: README.md  conftest.py  justfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_docker.yml  lint.yml
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_auth.py
config/: conftest.py  docs.py  factories.py  global_permissions.py  mixins.py  urls.py
config/settings/: __init__.py  base.py  local.py
docker/: Dockerfile  entrypoint.sh  scheduler.sh
issue/: mixins.py  models.py  serializers.py  urls.py  views.py
issue/migrations/: 0001_initial.py  0002_remove_issue_assigned_users_alter_comment_author_and_more.py
issue/tests/: test_comment.py  test_issue.py
project/: models.py  permissions.py  serializers.py  urls.py  views.py
project/migrations/: 0002_remove_contributor_role.py
project/tests/: test_contributor.py  test_project.py
user/: models.py  permissions.py  renderers.py  serializers.py  urls.py  views.py
user/management/commands/: create_test_users.py
user/migrations/: 0001_initial.py  0002_user_consent_user_date_of_birth.py
user/tests/: test_user.py
